fix: updates - bubbleVis alignment, color coordination with Andrew's chart, removed bubble vis

--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ SAHIL
 }
 
 .year-line {
-  stroke: var(--earth-yellow);
+  stroke: var(--davys-grey);
   stroke-width: 2;
   stroke-dasharray: 2;
 }
